src/main/java/org/example/basic/global/error/exception/EntityNotFoundException.java
package org.example.basic.global.error.exception;


import org.example.basic.global.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {

    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }

}
